k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: virtual-stock-trader
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: virtual-stock-trader
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: cavinsam/virtual-stock-trading-app-backend:latest
        ports:
        - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /api/auth/status
            port: 8081
          initialDelaySeconds: 45
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/auth/status
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi
